Restore color since it isn’t causing contrast issue

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -40,7 +40,7 @@
   --base-inverted: #fff;
 
   // Accent colors
-  --accent-brand: #3b49dd;
+  --accent-brand: #3b49df;
   --accent-brand-darker: #1827ce;
   --accent-brand-lighter: #8d95f2;
   --accent-brand-a10: #{rgba(#3b49df, 0.1)};
