--- a/app/assets/stylesheets/themes/minimal.scss
+++ b/app/assets/stylesheets/themes/minimal.scss
@@ -34,7 +34,7 @@
   --base-inverted: #ffffff;
 
   // Accent colors
-  --accent-brand: #3b49dd;
+  --accent-brand: #3b49df;
   --accent-brand-darker: #1827ce;
   --accent-brand-lighter: #8d95f2;
   --accent-brand-a10: #{rgba(#3b49df, 0.1)};
